src/objects/GOODS__c.object
<CustomObject>
    <fields>
        <fullName>GoodsBrand__c</fullName>
        <label>GoodsBrand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsDescribe__c</fullName>
        <label>GoodsDescribe</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsName__c</fullName>
        <label>GoodsName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsPrice__c</fullName>
        <label>GoodsPrice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsType__c</fullName>
        <label>GoodsType</label>
        <picklist>
            <picklistValues>
                <fullName>电脑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>汽车</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GOODS</label>
    <nameField>
        <label>GOODS Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>